# ros2_cpp_py_package

./: CMakeLists.txt  README.md  package.xml
scripts/: py_test.py
src/: cpp_test.cpp
